Fix hover over media kit spacing issue, fix Frequently Requested Assets to match casing

--- a/src/scss/partials/_sticky.scss
+++ b/src/scss/partials/_sticky.scss
@@ -55,7 +55,6 @@
   a.styleguide-sticky-link-right:focus,
   a.styleguide-sticky-link-right:hover {
     color: #ffffff;
-    padding-right: 0;
   }
 
   a.styleguide-sticky-link-right{
